# tracktor

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-COMMERCIAL  README.md
.github/workflows/: tests.yml
examples/: advanced_tracking.rs  basic_tracking.rs  cphd_tracking.rs  glmb_tracking.rs  lmb_multisensor.rs  lmb_tracking.rs  lmbm_tracking.rs  measurement_driven_birth.rs
src/: lib.rs  main.rs
src/assignment/: hungarian.rs  mod.rs  traits.rs
src/filters/: cphd.rs  ekf.rs  kalman.rs  mod.rs  phd.rs  ukf.rs
src/filters/glmb/: conversions.rs  filter.rs  mod.rs  types.rs
src/filters/lmb/: cardinality.rs  filter.rs  fusion.rs  lmbm.rs  mod.rs  multisensor.rs  tests.rs  types.rs  updaters.rs
src/models/: birth.rs  clutter.rs  mod.rs  observation.rs  transition.rs
src/types/: gaussian.rs  labels.rs  mod.rs  phase.rs  spaces.rs  transforms.rs
src/utils/: extraction.rs  mod.rs  pruning.rs
tests/: cphd_integration.rs  glmb_integration.rs  lmb_integration.rs  multi_target_scenarios.rs  phd_integration.rs
tests/common/: mod.rs
